--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -15,9 +15,7 @@
     <!-- Подключен файл со стандартными стилями бустрап -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <title>
-        {% block title %}
-            Где название, Карл?
-        {% endblock %}
+        {% block title %}Missing title{% endblock %}
     </title>
   </head>
   <body>
@@ -25,9 +23,10 @@
     {% include 'includes/header.html' %}    
     </header>
     <main>
-    {% block content %}
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Может он тут?</a>
-    {% endblock %}
+      <div class="container py-5">
+      <!-- класс py-5 создает отступы сверху и снизу блока --> 
+        {% block content %}Missing content{% endblock %}
+      </div>
     </main>
     <!-- Использованы классы бустрапа: -->
     <!-- border-top: создаёт тонкую линию сверху блока -->
