--- a/yatube/templates/users/login.html
+++ b/yatube/templates/users/login.html
@@ -5,9 +5,7 @@
   <div class="row justify-content-center">
     <div class="col-md-8 p-5">
       <div class="card">
-        <div class="card-header">
-          Войти на сайт
-        </div>
+        <div class="card-header">Войти на сайт</div>
         <div class="card-body">
           {% if form.errors %}
               {% for field in form %}
