--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -3,4 +3,5 @@
 {% block content %}
   <h1>Последние обновления на сайте</h1>
   {% include 'includes/post.html' %}
+  {% include 'includes/paginator.html' %}
 {% endblock %}
