--- a/yatube/templates/includes/post.html
+++ b/yatube/templates/includes/post.html
@@ -1,5 +1,5 @@
 <article>
-{% for post in posts %}
+{% for post in page_obj %}
     <ul>
         <li>Автор: {{ post.author.get_full_name }}</li>
         <li>Дата публикации: {{ post.pub_date|date:"d E Y" }}</li>
