--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -4,4 +4,5 @@
   <h1>{{ group.title }}</h1>
   <p>{{ group.description }}</p>
   {% include 'includes/post.html' %}
+  {% include 'includes/paginator.html' %}
 {% endblock %}
