Now user can add post

--- a/yatube/templates/includes/post.html
+++ b/yatube/templates/includes/post.html
@@ -5,7 +5,7 @@
         <li>Дата публикации: {{ post.pub_date|date:"d E Y" }}</li>
     </ul>      
     <p>{{ post.text }}</p>
-    {% if post and not group %}
+    {% if post.group and not group %}
         <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
     {% endif %}
     {% if not forloop.last %}<hr>{% endif %}
