--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -18,7 +18,7 @@
             <a href="{% url 'posts:post_detail' post.pk %}">подробная информация </a>
         {% endif %}
     </article>       
-    {% if post and not group %}
+    {% if post.group and not group %}
         <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
     {% endif %}
     {% if not forloop.last %}<hr>{% endif %}
