--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -9,7 +9,7 @@
       <!-- если у поста есть группа -->   
         <li class="list-group-item">
           Группа: {{ post.group.title }}
-          {% if post and not group %}
+          {% if post.group and not group %}
             <a href="{% url 'posts:group_list' post.group.slug %}">
                 все записи группы
             </a>
