--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
-{% block title %}Новый пост{% endblock %}
+{% block title %}{% if not post %} Добавить запись {% else %} Редактировать запись {% endif %}{% endblock %}
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-8 p-5">
       <div class="card">
-        <div class="card-header">Новый пост</div>
+        <div class="card-header">{% if not post %} Добавить запись {% else %} Редактировать запись {% endif %}</div>
           <div class="card-body">
           {% load user_filters %} {# Загружаем фильтры #}
               {% if form.errors %}
@@ -22,10 +22,7 @@
                   {% endfor %}
               {% endif %}
 
-              <form method="post"
-                {% if action_url %}
-                    action="{% url action_url %}"
-                {% endif %}>
+              <form method="post">
               {% csrf_token %}
 
               {# Выводим поля в цикле, по отдельности #}
@@ -51,7 +48,7 @@
               {% endfor %}
               <div class="d-flex justify-content-end">
                 <button type="submit" class="btn btn-primary">
-                    Сохранить
+                  {% if post %} Сохранить {% else %} Добавить {% endif %}
                 </button>
               </div>
             </form>
