--- a/yatube/templates/users/password_change_form.html
+++ b/yatube/templates/users/password_change_form.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% block title %}Изменение пароля{% endblock %}
 {% block content %}
 {% include 'includes/change_form_page.html' with head='Изменить пароль' btn='Изменить пароль' action_url='users:password_change' %}
