--- a/yatube/templates/users/password_reset_form.html
+++ b/yatube/templates/users/password_reset_form.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% block title %}Сброс пароля{% endblock %}
 {% block content %}
-{% include 'includes/change_form_page.html' with head='Чтобы сбросить старый пароль — введите адрес электронной почты, под которым вы регистрировались' btn='Сбросить пароль' action_url='users:password_reset' %}
+{% include 'includes/change_form_page.html' with head='Чтобы сбросить старый пароль — введите адрес электронной почты, под которым вы регистрировались' btn='Сбросить пароль' %}
 {% endblock %} 
