--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -19,7 +19,7 @@
           Автор: {{ post.author.get_full_name }}
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
-        Всего постов автора:  <span >{{ amount.count }}</span>
+        Всего постов автора:  <span >{{ post.author.posts.count }}</span>
       </li>
       <li class="list-group-item">
         {% if post %}
