--- a/yatube/templates/users/password_reset_complete.html
+++ b/yatube/templates/users/password_reset_complete.html
@@ -1,5 +1,18 @@
 {% extends 'base.html' %}
 {% block title %}Сброс пароля прошёл успешно{% endblock %}
 {% block content %}
-{% include 'includes/done_page.html' with head='Восстановление пароля завершено' body='Ваш пароль был сохранен. Используйте его для входа' bool_flag=True %}
+<div class="row justify-content-center">
+    <div class="col-md-8 p-5">
+      <div class="card">
+        <div class="card-header">Восстановление пароля завершено</div>
+        <div class="card-body">
+            <p>Ваш пароль был сохранен. Используйте его для входа</p>
+            <a href="{% url 'users:login' %}">
+              Войти
+            </a>
+        </div> <!-- card body -->
+      </div> <!-- card -->
+    </div> <!-- col -->
+</div> <!-- row -->
+{% comment %}{% include 'includes/done_page.html' with head='Восстановление пароля завершено' body='Ваш пароль был сохранен. Используйте его для входа' bool_flag=True %}{% endcomment %}
 {% endblock %} 
