--- a/yatube/templates/users/signup.html
+++ b/yatube/templates/users/signup.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% block title %}Зарегистрироваться{% endblock %}
 {% block content %}
 {% include 'includes/change_form_page.html' with head='Зарегистрироваться' btn='Зарегистрироваться' action_url='users:signup' %}
