--- a/yatube/templates/users/password_reset_complete.html
+++ b/yatube/templates/users/password_reset_complete.html
@@ -14,5 +14,5 @@
       </div> <!-- card -->
     </div> <!-- col -->
 </div> <!-- row -->
-{% comment %}{% include 'includes/done_page.html' with head='Восстановление пароля завершено' body='Ваш пароль был сохранен. Используйте его для входа' bool_flag=True %}{% endcomment %}
+{% comment %}{% include 'includes/password_reset_done_page.html' with head='Восстановление пароля завершено' body='Ваш пароль был сохранен. Используйте его для входа' %}{% endcomment %}
 {% endblock %} 
