add docstrings for views.py

--- a/yatube/templates/includes/done_page.html
+++ b/yatube/templates/includes/done_page.html
@@ -4,6 +4,11 @@
         <div class="card-header">{{ head }}</div>
         <div class="card-body">
             <p>{{ body }}</p>
+            {% if bool_flag %}
+              <a href="{% url 'users:login' %}">
+                Войти
+              </a>
+            {% endif %}
         </div> <!-- card body -->
       </div> <!-- card -->
     </div> <!-- col -->
