fix dot problem for include

--- a/yatube/templates/users/password_reset_complete.html
+++ b/yatube/templates/users/password_reset_complete.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 {% block title %}Сброс пароля прошёл успешно{% endblock %}
 {% block content %}
-{% include 'includes/done_page.html' with head='Восстановление пароля завершено' body='Ваш пароль был сохранен&#46 Используйте его для входа' bool_flag=True %}
+{% include 'includes/done_page.html' with head='Восстановление пароля завершено' body='Ваш пароль был сохранен. Используйте его для входа'|escape bool_flag=True %}
 {% endblock %}
