more includes in templates

--- a/yatube/templates/includes/change_form_page.html
+++ b/yatube/templates/includes/change_form_page.html
@@ -9,7 +9,7 @@
           {% endif %}
         </div>
         <div class="card-body">
-        {% load user_filters %}
+        
         {% include 'includes/error_processing.html' %}
 
         <form method="post"
@@ -17,21 +17,9 @@
             action="{% url action_url %}"
           {% endif %}>
           {% csrf_token %}
-
-        {% for field in form %} 
-          <div class="form-group row my-3 p-3">
-            <label for="{{ field.id_for_label }}">
-              {{ field.label }}
-                {% if field.field.required %}
-                  <span class="required text-danger">*</span>
-                {% endif %}
-            </label>
-            {{ field|addclass:'form-control' }} 
-            {% if field.help_text %}
-              <small id="{{ field.id_for_label }}-help" class="form-text text-muted">{{ field.help_text|safe }}</small>
-            {% endif %}
-          </div>
-        {% endfor %}
+        
+        {% include 'includes/form_field.html' %}
+        
         {% if not create_post %}
           <div class="col-md-6 offset-md-4">
           <button type="submit" class="btn btn-primary">{{ btn }}</button>
