--- a/yatube/templates/includes/post.html
+++ b/yatube/templates/includes/post.html
@@ -1,3 +1,4 @@
+{% load thumbnail %}
 {% for post in page_obj %}
     <article>
         <ul>
@@ -7,7 +8,10 @@
                 {% endif %}
             </li>
             <li>Дата публикации: {{ post.pub_date|date:"d E Y" }}</li>
-        </ul>      
+        </ul>
+        {% thumbnail post.image "960x339" upscale=True as im %}
+            <img class="card-img my-2" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+        {% endthumbnail %}      
         <p>{{ post.text }}</p>
         {% if bool_flag %}
             <a href="{% url 'posts:post_detail' post.pk %}">подробная информация</a><br>
