--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -37,6 +37,7 @@
     {% if post.author == request.user %}
       <a class="btn btn-primary" href="{% url 'posts:post_edit' post.pk %}">редактировать запись</a>
     {% endif %}
+    {% include 'includes/post_comments.html' %}
   </article>
 </div>
 {% endblock %}
