--- a/yatube/templates/includes/post.html
+++ b/yatube/templates/includes/post.html
@@ -7,7 +7,7 @@
                     <a href="{% url 'posts:profile' post.author %}">все посты пользователя</a>
                 {% endif %}
             </li>
-            <li>Дата публикации: {{ post.pub_date|date:"d E Y" }}</li>
+            <li>Дата публикации: {{ post.created|date:"d E Y" }}</li>
         </ul>
         {% thumbnail post.image "960x339" upscale=True as im %}
             <img class="card-img my-2" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
