--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% block title %}Последние обновления на сайте{% endblock %}
+{% block title %}Подписки{% endblock %}
 {% block content %}
-<h1>Последние обновления на сайте</h1>
+<h1>Мои подписки</h1>
 {% include 'includes/switcher.html' %}
 {% include 'includes/post.html' with bool_flag=True %}
 {% include 'includes/paginator.html' %}
