--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -2,7 +2,8 @@
 {% block title %}Профайл пользователя {{ author.get_full_name }}{% endblock %}
 {% block content %}
 <h1>Все посты пользователя {{ author.get_full_name }}</h1>
-<h3>Всего постов: {{ author.posts.count }} </h3>
+<h3>Всего постов: {{ author.posts.count }}</h3>
+{% include 'includes/follow_button.html' %}
 {% include 'includes/post.html' with bool_flag=True %}
 {% include 'includes/paginator.html' %}
 {% endblock %}
