--- a/yatube/templates/core/404.html
+++ b/yatube/templates/core/404.html
@@ -1,7 +1,13 @@
 {% extends "base.html" %}
-{% block title %}Custom 404{% endblock %}
+{% block title %}Ошибка 404. Страница не найдена{% endblock %}
 {% block content %}
-  <h1>Custom 404</h1>
-  <p>Страницы с адресом {{ path }} не существует</p>
-  <a href="{% url 'posts:index' %}">Идите на главную</a>
+<main role="main" class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h1>Ошибка 404</h1>
+      <p class="lead">Извините, но такой страницы не существует.</p>
+      <p class="lead">Попробойте ввести другой адрес или <a href="{% url 'posts:index' %}">вернитесь на главную</a></p>
+    </div>
+  </div>
+</main> 
 {% endblock %} 
