--- a/yatube/templates/core/500.html
+++ b/yatube/templates/core/500.html
@@ -1,5 +1,13 @@
 {% extends "base.html" %}
-{% block title %}Custom 500{% endblock %}
+{% block title %}500 Ошибка на сервере{% endblock %}
 {% block content %}
-    <h1>Custom 500</h1>
+<main role="main" class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h1>Ошибка 500</h1>
+      <p class="lead">Ошибка на сервере, попробуйте обновить страницу или обратиться позже</p>
+      <p class="lead"><a href="{% url 'posts:index' %}">Вернуться на главную</a></p>
+    </div>
+  </div>
+</main> 
 {% endblock %}
