--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -3,6 +3,8 @@
 {% block content %}
 <h1>Мои подписки</h1>
 {% include 'includes/switcher.html' %}
-{% include 'includes/post.html' with bool_flag=True %}
+{% for post in page_obj %}
+  {% include 'includes/post.html' with bool_flag=True %}
+{% endfor %} 
 {% include 'includes/paginator.html' %}
 {% endblock %}
