--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -3,6 +3,8 @@
 {% block content %}
 <h1>{{ group.title }}</h1>
 <p>{{ group.description }}</p>
-{% include 'includes/post.html' with bool_flag=True %}
+{% for post in page_obj %}
+  {% include 'includes/post.html' with bool_flag=True %}
+{% endfor %} 
 {% include 'includes/paginator.html' %}
 {% endblock %}
