--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -4,6 +4,8 @@
 <h1>Все посты пользователя {{ author.get_full_name }}</h1>
 <h3>Всего постов: {{ author.posts.count }}</h3>
 {% include 'includes/follow_button.html' %}
-{% include 'includes/post.html' with bool_flag=True %}
+{% for post in page_obj %}
+  {% include 'includes/post.html' with bool_flag=True %}
+{% endfor %} 
 {% include 'includes/paginator.html' %}
 {% endblock %}
